Minimig changelog
-----------------

Authors:
DW - Dennis van Weeren
JB - Jakub Bednarski
SB - Sascha Boing
AR - A.M. Robinson
TH - Till Harbaum
RK - Rok Krajnc


2015-09-10 - RK - USERIO       - disabled entering the OSD menu with DB9-connected joystick with UP+DOWN combination
2015-09-10 - RK - FIRMWARE     - fixed loading of Cloanto AmigaForever encrypted ROMs
2015-09-10 - RK - TG68         - reduced the speed of the CPU core
2015-09-10 - RK - MIST         - fixed PLL placement and external SDRAM clock routing, hopefully the core will be more stable
2015-09-10 - RK - MIST         - fixed keyboard problems - fixes game Walker (and probably many other)
2015-09-09 - RK - MINIMIG      - fixed (USB) mouse clock domain crossing, fixed application of JOYTEST data to (USB) mouse counters - fixes game Rainbow Islands cracktro (and probably many other)
2015-09-06 - RK - FIRMWARE     - fixed firmware kickstart loading, re-enabled support for 256kB ROMs, added support for 1MB ROMs, added support for AmigaForever encrypted ROMs (these still don't work OK)
2015-09-06 - RK - MINIMIG      - 1MB kickstart ROM support added
2015-09-05 - RK - MIST         - mist firmware is now a git submodule from git@github.com:mist-devel/mist-firmware.git
2015-06-12 - RK - USERIO       - chipset config is now applied on reset only
2015-06-12 - RK - MINIMIG      - added turbo options for chipRAM & kickROM
2015-06-10 - RK - CACHE        - updated cpu cache; working fastRAM, kickstart cache, chipRAM (non-cached)
2015-06-04 - TH - TG68         - PACK, UNPK instructions fix
2015-06-01 - RK - DENISE       - another (final!) SSCAN2 fix (SH10 coincidence detection) - Fantastic Dizzy works now
2015-06-01 - RK - AGNUS        - implemented sprite scandoubling (to be tested!)
2015-06-01 - RK - MIST         - updated global makefile
2015-06-01 - RK - DENISE       - fixed a bug in sprite scandoubler (should fix Fantastic Dizzy CD32)
2015-05-31 - RK - DENISE       - another fix for playfield CLUT offsets